<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/favoriteActivity"
        android:title="@string/favorite_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settingActivity"
        android:title="@string/setting_activity"
        app:showAsAction="never"/>
</menu>