...
                android:fontFamily="@font/inter_medium"
                android:textSize="13sp"
                android:text="@string/github_url"
                tools:text="github.com/" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/night_black"
                android:textSize="17sp"
                tools:text="Username" />
...
